rnsc/test_data/integration/error/parser/type_hints/long/trailing_tokens.rns
.class @long 100000 unexpected_second_operand
.super java/lang/Object
